repair z-index

--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ p {
   position: sticky;
   top: 0;
   width: 100%;
+  z-index: 1000;
   /*flex*/
   display: flex;
   flex-direction: column;
